Add `advancedSearch` functionality with filter flexibility and extensive test coverage
- Implemented `advancedSearch` method in `RestaurantService` for enhanced filtering based on partial matches and range criteria.
- Added `/advanced` endpoint in `SearchController` to support advanced search requests.
- Developed comprehensive test suite in `RestaurantServiceTest` to validate advanced search scenarios, ensuring robust functionality.

- Optimized order of streamed Restaurants to minimize best case performance